--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.8",
+    "axios": "^1.3.4",
     "framer-motion": "^10.9.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
