--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.8",
     "axios": "^1.3.4",
+    "chakra-ui-steps": "^2.1.0",
     "framer-motion": "^10.9.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
