--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
     "react-svg": "^16.1.7",
+    "react-toastify": "^9.1.3",
     "sort-by": "^0.0.2",
     "validations-br": "^1.3.0",
     "yup": "^1.1.1"
