--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hookform/resolvers": "^3.1.0",
     "axios": "^1.3.4",
     "chakra-ui-steps": "^2.1.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^10.9.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
